--- a/css/main.css
+++ b/css/main.css
@@ -480,6 +480,10 @@ margin-top: 40px;
     padding: 10px;
 }
 
+.description a {
+    text-decoration: none;
+}
+
 .description h4 {
     text-align: center;
     font-size: 25px;
@@ -534,6 +538,11 @@ margin-top: 40px;
 
 .mockup_row {
     width: 90%;
+    height: auto;
+    align-self: center;
+}
+.mockup_row2 {
+    width: 100%;
     height: auto;
     align-self: center;
 }
@@ -874,9 +883,15 @@ margin-top: 40px;
         align-self: center;
     }
 
+    .mockup_row2 {
+        width: 45%;
+        height: auto;
+        align-self: center;
+    }
+
     .mockup_center {
         align-self: center;
-        width: 35%;
+        width: 50%;
         margin-top: 40px;
     }
 
@@ -896,6 +911,42 @@ margin-top: 40px;
         font-size: 20px;
         margin-bottom: 30px;
     }
+
+    .some {
+        font-size: 30px;
+        margin: 30px 15px 0 0;
+        text-decoration: none;
+        color: black;
+    }
+
+    .some:hover {
+        color: #60628a;
+        transition: 0.3s;
+    }
+
+    .so {
+        position: absolute;
+        z-index: 0;
+        margin-top: 50px;
+        text-align: right;
+        width: 90%;
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        font-size: 30px;
+        width: 50%;
+        margin-top: 60px;
+        align-items: center;
+    }
+
+    .contact p {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
     
 }
 
