--- a/css/main.css
+++ b/css/main.css
@@ -541,7 +541,14 @@ margin-top: 40px;
     height: auto;
     align-self: center;
 }
+
 .mockup_row2 {
+    width: 100%;
+    height: auto;
+    align-self: center;
+}
+
+.mockup_row3 {
     width: 100%;
     height: auto;
     align-self: center;
@@ -575,6 +582,57 @@ margin-top: 40px;
 .details_category {
     align-items: center;
     font-size: 20px;
+}
+
+.some {
+    font-size: 30px;
+    margin: 30px 15px 0 0;
+    text-decoration: none;
+    color: black;
+}
+
+.some:hover {
+    color: #60628a;
+    transition: 0.3s;
+}
+
+.so {
+    position: absolute;
+    z-index: 0;
+    margin-top: 50px;
+    text-align: right;
+    width: 90%;
+}
+
+.CV {
+    width: 100%;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 10px 5px;
+    background-color: #F5F5F5;
+    text-align: center;
+    margin-top: 30px;
+    color: #60628a;
+}
+
+.getcv {
+    text-decoration: none;
+}
+
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: 30px;
+    width: 100%;
+    margin-top: 30px;
+    align-items: center;
+}
+
+.contact p {
+    font-size: 20px;
+    font-weight: 600;
 }
 
 
@@ -889,6 +947,13 @@ margin-top: 40px;
         align-self: center;
     }
 
+    .mockup_row3 {
+        width: 30%;
+        margin: 30px;
+        height: auto;
+        align-self: center;
+    }
+
     .mockup_center {
         align-self: center;
         width: 50%;
@@ -938,13 +1003,24 @@ margin-top: 40px;
         justify-content: space-around;
         font-size: 30px;
         width: 50%;
-        margin-top: 60px;
+        margin-top: 30px;
         align-items: center;
     }
 
     .contact p {
         font-size: 20px;
         font-weight: 600;
+    }
+
+    .CV {
+        width: 40%;
+        font-weight: 600;
+        font-size: 20px;
+        padding: 10px 5px;
+        background-color: #F5F5F5;
+        text-align: center;
+        margin-top: 30px;
+        color: #60628a;
     }
 
     
